<resources>
    <string name="app_name">snowhouse</string>
    <string name="title_home">Home</string>
    <string name="title_forum">Forum</string>
    <string name="title_add">Add</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_account">Account</string>
    <string name="title_details">Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Sign In</string>
    <string name="register_title">Sign Up</string>
    <string name="userName">UserName</string>
    <string name="password">Password</string>
    <string name="password2">Re-enter your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nav_register">Not have an account? Sign Up</string>
    <string name="nav_login">Already have an account? Sign In</string>
    <string name="search">🔍 Search for posts</string>
    <string name="search_button">Search</string>
    <string name="title">Title</string>
    <string name="createdTime">CreatedTime</string>
    <string name="count">0</string>
    <string name="content">Content</string>
    <string name="my_post">My Posts: </string>
    <string name="tag_input">Enter up to three tags separated by comma</string>
    <string name="upload_image">Upload an Image</string>
    <string name="post">Add Post!</string>
    <string name="mountain_description">Mountain Description:</string>
    <string name="ticket_information">Ticket information:</string>
    <string name="weather_information">Weather information:</string>
    <string name="open_hours_information">Open Hours information:</string>
    <string name="mountain_address">Mountain Address:</string>
    <string name="please_rate_the_mountain">Please rate the mountain</string>
    <string name="rate">Rate</string>
    <string name="Avg_Rate">Rating:</string>
    <string name="mountain_image">mountain image</string>
    <string name="default_rate">5/5</string>
</resources>