<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_forum"
        android:icon="@drawable/ic_forum_black_24dp"
        android:title="@string/title_forum" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_inbox_black_24dp"
        android:title="@string/title_inbox" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_black_24dp"
        android:title="@string/title_account" />

</menu>