<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.neu.snowhouse.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.neu.snowhouse.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_inbox"
        android:name="com.neu.snowhouse.ui.inbox.InboxFragment"
        android:label="@string/title_inbox"
        tools:layout="@layout/fragment_inbox" />
    <fragment
        android:id="@+id/navigation_post"
        android:name="com.neu.snowhouse.ui.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post" />
</navigation>