<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:focusable="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp">

        <TextView
            android:id="@+id/item_inbox_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/item_inbox_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:clickable="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_inbox_title"
            app:srcCompat="@drawable/ic_baseline_thumb_up_20" />

        <ImageButton
            android:id="@+id/item_inbox_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:clickable="false"
            app:layout_constraintStart_toEndOf="@+id/item_inbox_up"
            app:layout_constraintTop_toBottomOf="@+id/item_inbox_title"
            app:srcCompat="@drawable/ic_baseline_thumb_down_20" />

        <TextView
            android:id="@+id/item_inbox_createdTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/createdTime"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/item_inbox_likeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/count"
            app:layout_constraintStart_toEndOf="@+id/item_inbox_up"
            app:layout_constraintTop_toBottomOf="@+id/item_inbox_title" />

        <TextView
            android:id="@+id/item_inbox_dislikeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/count"
            app:layout_constraintStart_toEndOf="@+id/item_inbox_down"
            app:layout_constraintTop_toBottomOf="@+id/item_inbox_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>